Bug 1246622 - Handle nested preserve-3d contexts when hit testing. r=roc, a=lizzard

--HG--
extra : source : a8b26015bfd952b9347fc957dc6a6f2a27a87978